Created the css style, nav html file, added styling for the the wildcard, added header content for all the nav.

--- a/signup.html
+++ b/signup.html
@@ -19,8 +19,8 @@
         <a href="index.html"><h1 id="logo"></h1>Yoga Club</a>
         <nav>
             <ul>
-                <li><a href="aboutus.html" class="active">About us</a></li>
-                <li><a href="yogastyle.html">Styles</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+                <li><a href="yogastyle.html" class="active">Styles</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
