--- a/yogastyle.html
+++ b/yogastyle.html
@@ -19,9 +19,9 @@
         <a href="index.html"><h1 id="logo"></h1>Yoga Club</a>
         <nav>
             <ul>
-                <li><a href="aboutus.html" class="active">About us</a></li>
-                <li><a href="yogastyle.html">Styles</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+                <li><a href="yogastyle.html">Yoga Styles</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
     </header>
