Add the content for the section in main, import the font style from the google fonts website, added the body and heading font styles & color

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta tags for serach engine-->
-    <meta name="description" content="Yoga club, Club for physical, mental, and spiritual practices through Yoga in Shannon, County Clare, Ireland">
-    <meta name="keywords" content="Yoga club, yoga, physical yoga, mental yoga, spriritual yoga,shannon, county clare, Ireland">
+    <meta name="description"
+        content="Yoga club, Club for physical, mental, and spiritual practices through Yoga in Shannon, County Clare, Ireland">
+    <meta name="keywords"
+        content="Yoga club, yoga, physical yoga, mental yoga, spriritual yoga,shannon, county clare, Ireland">
     <!--Title bar-->
     <title>Yoga Club</title>
     <!--favicon-->
@@ -13,27 +16,124 @@
     <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <!--Header-->
     <header>
-        <a href="index.html"><h1 id="logo"></h1>Yoga Club</a>
-        
-        <nav>
-            <ul>
-                <li><a href="aboutus.html" class="active">About us</a></li>
-                <li><a href="yogastyle.html">Styles</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
-            </ul>
-        </nav>
+        <a href="index.html">
+            <h1 id="logo"></h1>Yoga Club
+        </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+            <nav>
+                <ul>
+                    <li><a href="aboutus.html" class="active">About us</a></li>
+                    <li><a href="yogastyle.html">Styles</a></li>
+                    <li><a href="signup.html">Sign Up</a></li>
+                </ul>
+            </nav>
     </header>
     <!--Main-->
     <main>
         <section id="hero">
         </section>
+
+        <section>
+            <h2>ABOUT YOGA Club</h2>
+            <p>We offer specialized yoga teacher training courses designed for beginners.
+                If you are new to yoga, there are a few key things you should know. Most importantly,
+                it's essential to familiarize yourself with the basic poses to feel comfortable practicing
+                both in a group setting and on your own. Our program fee covers accommodation, meals,
+                yoga sessions, and other related activities.
+            </p>
+
+            <div>
+                <h3>Improves Physical Health</h3>
+                <hr>
+                <p>Yoga enhances overall physical health by promoting flexibility, strength, and balance. Regular
+                    practice of yoga poses,
+                    or asanas, stretches and tones the muscles, improving joint flexibility and reducing the risk of
+                    injuries.
+                    Additionally, yoga strengthens the core muscles, which helps in maintaining good posture and
+                    preventing back pain.
+                    Studies have shown that yoga can also lower blood pressure,
+                    improve cardiovascular health, and boost the immune system, contributing to a healthier body.</p>
+            </div>
+            <div>
+                <h3>Reduces Stress and Anxiety</h3>
+                <hr>
+                <p>One of the most celebrated benefits of yoga is its ability to reduce stress and anxiety. Yoga
+                    incorporates
+                    various breathing techniques, known as pranayama, which help calm the mind and promote relaxation.
+                    The combination of physical movement and focused breathing activates the parasympathetic nervous
+                    system,
+                    which lowers the body's stress response. Regular practice of yoga can lead to a significant
+                    reduction in cortisol levels,
+                    the primary stress hormone, fostering a sense of peace and well-being.</p>
+            </div>
+
+            <div>
+                <h3>Enhances Mental Clarity and Focus</h3>
+                <hr>
+                <p>Yoga is not just a physical practice but also a mental one. Through meditation and mindful movement,
+                    yoga helps sharpen mental clarity and improve concentration. The practice encourages present-moment
+                    awareness,
+                    which can enhance cognitive functions and decision-making skills. Regular yoga practitioners often
+                    report improved
+                    memory and mental sharpness, as the practice trains the mind to stay
+                    focused and reduces the clutter of distracting thoughts.</p>
+            </div>
+            <div>
+                <h3>Promotes Emotional Stability</h3>
+                <hr>
+                <p>Yoga has profound effects on emotional health.
+                    The practice encourages self-awareness and introspection, allowing individuals to understand and
+                    manage
+                    their emotions better. The meditative aspects of yoga help cultivate a positive outlook on life and
+                    improve
+                    emotional resilience. Furthermore, the sense of community and support found in group yoga classes
+                    can reduce feelings of loneliness and isolation, promoting a sense of belonging and emotional
+                    well-being.</p>
+            </div>
+        </section>
+
+        <!-- Training Schedule -->
+        <section id="schedule">
+            <h2 class="hide-heading">OUR OFFERS</h2>
+            <div id="training peroid">
+                <div>
+                    <h3>CHILDREN YOGA TRAINING</h3>
+                    <p>100 HOURS TRAINING</p>
+                    <p>EVERY MONDAY, WEDNESDAY, FRIDAY, 6-7 PM</p>
+                </div>
+                <div>
+                    <h3>PREGNANCY YOGA TRAINING</h3>
+                    <p>80 HOURS TRAINING</p>
+                    <p>EVERY MONDAY, WEDNESDAY, FRIDAY, 5-6 PM</p>
+                </div>
+                <div>
+                    <h3>ADULT YOGA TRAINING</h3>
+                    <p>150 HOURS TRAINING</p>
+                    <p>EVERY TUESDAY, THURSDAY, 5-6.3O PM</p>
+                </div>
+                <div>
+                    <h3>TEACHER YOGA TRAINING</h3>
+                    <p>500 HOURS TRAINING</p>
+                    <p>EVERYDAY 7-8 PM</p>
+                </div>
+                <div>
+                    <h3>ONLINE THERAPY TRAINING</h3>
+                    <p>200 HOURS TRAINING</p>
+                    <p>EVERYDAY 6-7 AM</p>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!--Footer-->
-    <footer> 
+    <footer>
         <ul id="social-media-net">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
@@ -62,4 +162,5 @@
     <script src="https://kit.fontawesome.com/2b8f133eab.js" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
