Added the flex display, padding, back-ground color to body, header css styles and nav styles.

--- a/index.html
+++ b/index.html
@@ -21,19 +21,22 @@
     <!--Header-->
     <header>
         <a href="index.html">
-            <h1 id="logo"></h1>Yoga Club
+            <h1 id="logo">Yoga Club</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">
-            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars"></i> </label>
+            <!--Navigator-->
             <nav>
-                <ul>
+                <ul id="nav-menu">
                     <li><a href="aboutus.html" class="active">About us</a></li>
                     <li><a href="yogastyle.html">Styles</a></li>
                     <li><a href="signup.html">Sign Up</a></li>
                 </ul>
             </nav>
     </header>
+         
+
     <!--Main-->
     <main>
         <section id="hero">
