Add reasonsstyle,media for the different screen size style.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section id="hero">
         </section>
 
-        <section>
+        <section id="reasons">
             <h2>ABOUT YOGA Club</h2>
             <p>We offer specialized yoga teacher training courses designed for beginners.
                 If you are new to yoga, there are a few key things you should know. Most importantly,
@@ -51,7 +51,7 @@
                 yoga sessions, and other related activities.
             </p>
 
-            <div>
+            <div id="benefits-physical">
                 <h3>Improves Physical Health</h3>
                 <hr>
                 <p>Yoga enhances overall physical health by promoting flexibility, strength, and balance. Regular
@@ -63,7 +63,7 @@
                     Studies have shown that yoga can also lower blood pressure,
                     improve cardiovascular health, and boost the immune system, contributing to a healthier body.</p>
             </div>
-            <div>
+            <div id="benefits-peace">
                 <h3>Reduces Stress and Anxiety</h3>
                 <hr>
                 <p>One of the most celebrated benefits of yoga is its ability to reduce stress and anxiety. Yoga
@@ -76,7 +76,7 @@
                     the primary stress hormone, fostering a sense of peace and well-being.</p>
             </div>
 
-            <div>
+            <div id="benefits-mental">
                 <h3>Enhances Mental Clarity and Focus</h3>
                 <hr>
                 <p>Yoga is not just a physical practice but also a mental one. Through meditation and mindful movement,
@@ -87,7 +87,7 @@
                     memory and mental sharpness, as the practice trains the mind to stay
                     focused and reduces the clutter of distracting thoughts.</p>
             </div>
-            <div>
+            <div id="benefits-stability">
                 <h3>Promotes Emotional Stability</h3>
                 <hr>
                 <p>Yoga has profound effects on emotional health.
