Add the navigation menu to all html pages.

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta tags for serach engine-->
-    <meta name="description" content="Yoga club, Club for physical, mental, and spiritual practices through Yoga in Shannon, County Clare, Ireland">
-    <meta name="keywords" content="Yoga club, yoga, physical yoga, mental yoga, spriritual yoga,shannon, county clare, Ireland">
+    <meta name="description"
+        content="Yoga club, Club for physical, mental, and spiritual practices through Yoga in Shannon, County Clare, Ireland">
+    <meta name="keywords"
+        content="Yoga club, yoga, physical yoga, mental yoga, spriritual yoga,shannon, county clare, Ireland">
     <!--Title bar-->
     <title>Yoga Club</title>
     <!--favicon-->
@@ -13,20 +16,25 @@
     <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <!--Header-->
     <header>
-        <a href="index.html"><h1 id="logo"></h1>Yoga Club</a>
-        <nav>
-            <ul>
-                <li><a href="aboutus.html" class="active">About us</a></li>
-                <li><a href="yogastyle.html">Styles</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
-            </ul>
-        </nav>
+        <a href="index.html">
+            <h1 id="logo">Yoga Club</h1>
+        </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i> </label>
+            <!--Navigator-->
+            <nav>
+                <ul id="nav-menu">
+                    <li><a href="index.html" class="active">About us</a></li>
+                    <li><a href="yogastyle.html">Styles</a></li>
+                    <li><a href="signup.html">Sign Up</a></li>
+                </ul>
+            </nav>
     </header>
-
-
     
     
 </body>
