Offers image and flex display styling added

--- a/index.html
+++ b/index.html
@@ -103,33 +103,41 @@
 
         <!-- Training Schedule -->
         <section id="schedule">
-            <h2 class="hide-heading">OUR OFFERS</h2>
-            <div id="training peroid">
+            <h2>OUR OFFERS</h2>
+            <div id="training-peroid">
                 <div>
                     <h3>CHILDREN YOGA TRAINING</h3>
+                    <img class="scale-with-grid" src="assets/images/Children Yoga pic.jpeg" alt="Childern Yoga class ">
                     <p>100 HOURS TRAINING</p>
                     <p>EVERY MONDAY, WEDNESDAY, FRIDAY, 6-7 PM</p>
+
                 </div>
                 <div>
                     <h3>PREGNANCY YOGA TRAINING</h3>
+                    <img class="scale-with-grid" src="assets/images/pregency yoga.jpeg" alt="Pregnancy Yoga Class">
                     <p>80 HOURS TRAINING</p>
                     <p>EVERY MONDAY, WEDNESDAY, FRIDAY, 5-6 PM</p>
                 </div>
                 <div>
                     <h3>ADULT YOGA TRAINING</h3>
+                    <img class="scale-with-grid" src="assets/images/Adult yoga.jpeg" alt="Adult Yoga class ">
                     <p>150 HOURS TRAINING</p>
                     <p>EVERY TUESDAY, THURSDAY, 5-6.3O PM</p>
                 </div>
                 <div>
                     <h3>TEACHER YOGA TRAINING</h3>
+                    <img class="scale-with-grid" src="assets/images/Teacher Yoga.jpeg" alt="Teacher Yoga class ">
                     <p>500 HOURS TRAINING</p>
                     <p>EVERYDAY 7-8 PM</p>
                 </div>
+
                 <div>
                     <h3>ONLINE THERAPY TRAINING</h3>
+                    <img class="scale-with-grid" src="assets/images/Online Therapy.jpg" alt="Online therapy Yoga class ">
                     <p>200 HOURS TRAINING</p>
                     <p>EVERYDAY 6-7 AM</p>
                 </div>
+              
             </div>
         </section>
 
