Added the style for the sign up page, for the smaller and large decice, added the image.

--- a/signup.html
+++ b/signup.html
@@ -35,5 +35,77 @@
                 </ul>
             </nav>
     </header>
+
+    <!------Main------>
+
+    <main>
+        <section id="join-us">
+            <form id="join-us-form" method="Post" action="https://formdump.codeinstitute.net">
+                <h2> Join Us</h2>
+                <label for="firstname">First Name</label>
+                <input type="text" name="first_name" id="firstname" class="text-input" required>
+                <br>
+                <label for="lastname">First Name</label>
+                <input type="text" name="last_name" id="lastname" class="text-input" required>
+                <br>
+                <label for="emailaddress">Email Address</label>
+                <input type="email" name="email_address" id="emailaddress" class="text-input" required>
+                <br>
+                <div class="radiobtn">
+                    <div>
+                        <label for="Child">Childern Yoga Training</label>
+                        <input type="radio" name="Category" id="Child" value="Child" required checked>
+                    </div>
+                    <div>
+                        <label for="Pregnancy">Pregnancy Yoga Training</label>
+                        <input type="radio" name="Category" id="Pregnancy" value="Pregnancy" required>
+                    </div>
+                    <div>
+                        <label for="both">Adult Yoga Training</label>
+                        <input type="radio" name="Category" id="both" value="both" required>
+                    </div>
+                    <div>
+                        <label for="both">Teacher Yoga Training</label>
+                        <input type="radio" name="Category" id="both" value="both" required>
+                    </div>
+                    <div>
+                        <label for="both">Online Therapy Training</label>
+                        <input type="radio" name="Category" id="both" value="both" required>
+                    </div>
+                </div>
+                <button type="submit" class="joinbtn">Start the training!</button>
+
+            </form>
+        </section>
+    </main>
+
+    <!--Footer-->
+    <footer>
+        <ul id="social-media-net">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
+
+    <!--Font Awesome Path-->
+    <script src="https://kit.fontawesome.com/2b8f133eab.js" crossorigin="anonymous"></script>
 </body>
 </html>
