Added the style gallery image pose

--- a/yogastyle.html
+++ b/yogastyle.html
@@ -36,5 +36,54 @@
             </nav>
     </header>
 
+           <!-- Styles Gallery Main -->
+           <main>
+            <section id="stylegallery">
+                <div id="stylephotos">
+                    <img src="assets/images/Styles 1.jpeg" alt="Yoga Style pose 1">
+                    <img src="assets/images/Styles 2.jpeg" alt="Yoga Style pose 2">
+                    <img src="assets/images/Styles 3.jpeg" alt="Yoga Style pose 3">
+                    <img src="assets/images/Styles 4.jpeg" alt="Yoga Style pose 4">
+                    <img src="assets/images/Styles 5.jpeg" alt="Yoga Style pose 5">
+                    <img src="assets/images/Styles 6.jpeg" alt="Yoga Style pose 6">
+                    <img src="assets/images/Styles 7.jpeg" alt="Yoga Style pose 7">
+                    <img src="assets/images/Styles 8.jpeg" alt="Yoga Style pose 8">
+                    <img src="assets/images/Styles 9.jpeg" alt="Yoga Style pose 9">
+                    <img src="assets/images/Styles 10.jpeg" alt="Yoga Style pose 10">
+                    <img src="assets/images/Styles 11.jpeg" alt="Yoga Style pose 11">
+                    <img src="assets/images/Styles 12.jpeg" alt="Yoga Style pose 12">
+                </div>
+            </section>
+        </main>
+        
+   <!--Footer-->
+   <footer>
+    <ul id="social-media-net">
+        <li>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Facebook page (opens in a new tab)">
+                <i class="fa-brands fa-facebook"></i></a>
+        </li>
+        <li>
+            <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Twitter page (opens in a new tab)">
+                <i class="fa-brands fa-twitter-square"></i></a>
+        </li>
+        <li>
+            <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                aria-label="Visit our YouTube page (opens in a new tab)">
+                <i class="fa-brands fa-youtube-square"></i></a>
+        </li>
+        <li>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Instagram page (opens in a new tab)">
+                <i class="fa-brands fa-instagram"></i></a>
+        </li>
+    </ul>
+</footer>
+
+<!--Font Awesome Path-->
+<script src="https://kit.fontawesome.com/2b8f133eab.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
