Added the image for the about us main and footer

--- a/aboutus.html
+++ b/aboutus.html
@@ -29,12 +29,57 @@
             <!--Navigator-->
             <nav>
                 <ul id="nav-menu">
-                    <li><a href="index.html" class="active">About us</a></li>
+                    <li><a href="aboutus.html" class="active">About us</a></li>
                     <li><a href="yogastyle.html">Styles</a></li>
                     <li><a href="signup.html">Sign Up</a></li>
                 </ul>
             </nav>
     </header>
+
+     <!--Main-->
+     <main>
+        <section id="aboutushero">
+        </section>
+    </main>
+
+    <section id="aboutusreasons">
+        <h2>ABOUT US</h2>
+        <p>We offer specialized yoga teacher training courses designed for beginners.
+            If you are new to yoga, there are a few key things you should know. Most importantly,
+            it's essential to familiarize yourself with the basic poses to feel comfortable practicing
+            both in a group setting and on your own. Our program fee covers accommodation, meals,
+            yoga sessions, and other related activities.
+        </p>
+    </section>
+
+       <!--Footer-->
+       <footer>
+        <ul id="social-media-net">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
+
+    <!--Font Awesome Path-->
+    <script src="https://kit.fontawesome.com/2b8f133eab.js" crossorigin="anonymous"></script>
     
     
 </body>
