Change the image quality, reduce the space betwwen the element, chane the image naming, delete the aboutus based on the mentor suggestion

--- a/signup.html
+++ b/signup.html
@@ -26,18 +26,17 @@
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">
             <i class="fa-solid fa-bars"></i> </label>
-            <!--Navigator-->
-            <nav>
-                <ul id="nav-menu">
-                    <li><a href="aboutus.html" >About us</a></li>
-                    <li><a href="yogastyle.html" class="active">Styles</a></li>
-                    <li><a href="signup.html">Sign Up</a></li>
-                </ul>
-            </nav>
+        <!--Navigator-->
+        <nav>
+            <ul id="nav-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="yogastyle.html" class="active">Styles</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!------Main------>
-
     <main>
         <section id="join-us">
             <form id="join-us-form" method="Post" action="https://formdump.codeinstitute.net">
@@ -45,7 +44,7 @@
                 <label for="firstname">First Name</label>
                 <input type="text" name="first_name" id="firstname" class="text-input" required>
                 <br>
-                <label for="lastname">First Name</label>
+                <label for="lastname">Last Name</label>
                 <input type="text" name="last_name" id="lastname" class="text-input" required>
                 <br>
                 <label for="emailaddress">Email Address</label>
@@ -74,7 +73,6 @@
                     </div>
                 </div>
                 <button type="submit" class="joinbtn">Start the training!</button>
-
             </form>
         </section>
     </main>
@@ -108,4 +106,5 @@
     <!--Font Awesome Path-->
     <script src="https://kit.fontawesome.com/2b8f133eab.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
