Update the read.md, found the bugs and performance using the lighthouse

--- a/signup.html
+++ b/signup.html
@@ -52,24 +52,24 @@
                 <br>
                 <div class="radiobtn">
                     <div>
-                        <label for="Child">Childern Yoga Training</label>
-                        <input type="radio" name="Category" id="Child" value="Child" required checked>
+                        <label for="child">Childern Yoga Training</label>
+                        <input type="radio" name="category" id="child" value="child" required checked>
                     </div>
                     <div>
-                        <label for="Pregnancy">Pregnancy Yoga Training</label>
-                        <input type="radio" name="Category" id="Pregnancy" value="Pregnancy" required>
+                        <label for="pregnancy">Pregnancy Yoga Training</label>
+                        <input type="radio" name="category" id="pregnancy" value="pregnancy" required>
                     </div>
                     <div>
-                        <label for="both">Adult Yoga Training</label>
-                        <input type="radio" name="Category" id="both" value="both" required>
+                        <label for="adult">Adult Yoga Training</label>
+                        <input type="radio" name="category" id="adult" value="adult" required>
                     </div>
                     <div>
-                        <label for="both">Teacher Yoga Training</label>
-                        <input type="radio" name="Category" id="both" value="both" required>
+                        <label for="teacher">Teacher Yoga Training</label>
+                        <input type="radio" name="category" id="teacher" value="teacher" required>
                     </div>
                     <div>
-                        <label for="both">Online Therapy Training</label>
-                        <input type="radio" name="Category" id="both" value="both" required>
+                        <label for="onlinetherapy">Online Therapy Training</label>
+                        <input type="radio" name="Category" id="onlinetherapy" value="onlinetherapy" required>
                     </div>
                 </div>
                 <button type="submit" class="joinbtn">Start the training!</button>
