Debug the code through validator and fix the bug for the section lacks heading, updated the readme.md.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <!--Main-->
     <main>
         <section id="hero">
+            <h2 class="hidden-heading">Hero</h2>
         </section>
         <section id="reasons">
             <h2>ABOUT YOGA Club</h2>
