--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
 
-    <!------Main------>
+    <!--Main-->
     <main>
         <section id="join-us">
             <form id="join-us-form" method="Post" action="https://formdump.codeinstitute.net">
