--- a/yogastyle.html
+++ b/yogastyle.html
@@ -38,6 +38,7 @@
     <!-- Styles Gallery Main -->
     <main>
         <section id="stylegallery">
+            <h2 class="hidden-heading">stylegallery</h2>
             <div id="stylephotos">
                 <img src="assets/images/pose_one.jpg" alt="yoga_pose_one">
                 <img src="assets/images/pose_two.jpg" alt="yoga_pose_two">
