Update in the form for the uppercase and lowercase difference for the catergory

--- a/signup.html
+++ b/signup.html
@@ -69,7 +69,7 @@
                     </div>
                     <div>
                         <label for="onlinetherapy">Online Therapy Training</label>
-                        <input type="radio" name="Category" id="onlinetherapy" value="onlinetherapy" required>
+                        <input type="radio" name="category" id="onlinetherapy" value="onlinetherapy" required>
                     </div>
                 </div>
                 <button type="submit" class="joinbtn">Start the training!</button>
